--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "react-icons": "^4.8.0",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1"
   }
