Add github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://johnlai.ca",
+    "homepage": "https://johnxlai.github.io/2023-portfolio",
   "name": "jlai-react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1"
   }
