Update homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://johnxlai.github.io/2023-portfolio",
-  "name": "jlai-react-portfolio",
+  "homepage": "https://johnlai.ca/",
+  "name": "john-lai-react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
